Remove sass-rails helper from custom.scss

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -47,7 +47,7 @@ nav {
   margin-top:20px;
   height: 490px;
   background-repeat: no-repeat;
-  background-image: asset-url("donkey-card.png")
+  background-image: url("donkey-card.png")
 }
 
 .donkey-card p.title {
